/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package com.dremio.datastore;

option java_package = "com.dremio.datastore.proto";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;
/* option java_multiple_files = true; */

enum enumType {
  ZERO = 0;
  ONE = 1;
}

message DummyId {
  required string id = 1;
}

message SampleMessage {
  required string name = 1;
  optional string tag = 2;
  required int32 id = 3;
}

message RootLevelMessage {
  required string rootId = 1;
  required SampleMessage sampleMessage = 2;
}

message DummyMapFieldEntry {
  required string key = 1;
  required DummyId value = 2;
}

message DummyNonStandardMapFieldEntry {
  required string thisIsAKey = 1;
  required DummyId thisIsAValue = 2;
}

message DummyObj {
  required DummyId id = 1;
  optional string tag = 2;
  repeated DummyId id_list = 3;
  repeated bytes bytes = 4;
  optional enumType type = 5;
  optional bool flag = 6;
  repeated int32  int32_seq = 7;
  repeated int64  int64_seq = 8;
  repeated uint32 uint32_seq = 9;
  repeated uint64 uint64_seq = 10;
  repeated float float_seq = 11;
  repeated double double_seq = 12;

  repeated DummyMapFieldEntry backward_compatible_map_field = 13;
  repeated DummyNonStandardMapFieldEntry non_standard_map_field = 14;

  message NestedDummyObj {
    optional DummyId id = 1;
    optional string tag = 2;
  }

  optional NestedDummyObj nested = 15;
}
